--- a/css/styles.css
+++ b/css/styles.css
@@ -544,3 +544,72 @@ ul {
     list-style: none;
 }
 
+.footer-subscribe{
+    margin-left: 80px;
+}
+
+.subscribe-label{
+    color: #2E2F42;
+    background-color: #e7e9fc;
+
+}
+
+.form-subscribe{
+color: #2e2f42;
+border: 1px solid #fff;
+    border-radius: 4px;
+
+}
+
+.footer-subscribe-text{
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+}
+
+.btn-subscribe{
+    background: #4d5ae5;
+    border-radius: 4px;
+        padding: 8px 24px;
+        width: 165px;
+        height: 40px;
+        display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            gap: 16px;
+}
+
+
+
+.modal{
+    border-radius: 4px;
+        width: 408px;
+        height: 584px;
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+            background: #fcfcfc;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            
+}
+
+.text-modal{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+padding: 72px, 24px, 12px, 24px;
+}
+
+.label-modal{
+    width: 100%;
+}
+
+.icons-modal{
+    color: #020203;
+}
