--- a/css/styles.css
+++ b/css/styles.css
@@ -548,20 +548,36 @@ ul {
     margin-left: 80px;
 }
 
-.subscribe-label{
-    color: #2E2F42;
-    background-color: #e7e9fc;
+
+.form-subscribe{
+    display: flex;
+color: #2e2f42;
+    border-radius: 4px;
+    gap 24px;
 
 }
 
-.form-subscribe{
-color: #2e2f42;
-border: 1px solid #fff;
+.footer-input{
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    color: #ffffff;
 
+}
+
+input::placeholder {
+    color: #ffffff;
 }
 
 .footer-subscribe-text{
+    margin-bottom: 16px;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -570,30 +586,96 @@ border: 1px solid #fff;
 }
 
 .btn-subscribe{
-    background: #4d5ae5;
-    border-radius: 4px;
-        padding: 8px 24px;
-        width: 165px;
-        height: 40px;
-        display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: row;
-            gap: 16px;
+min-width: 165px;
+height: 40px;
+display: flex;
+justify-content: center;
+align-items: center;
+font-family: "Roboto", sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+cursor: pointer;
+background-color: #4D5AE5;
+border: none;
+border-radius: 4px;
+
+}
+
+.icon-footer{
+    margin-left: 16px;
 }
 
 
+.modal-overlay{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(46, 47, 66, 0.4);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
 
 .modal{
-    border-radius: 4px;
-        width: 408px;
-        height: 584px;
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-            background: #fcfcfc;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 408px;
+min-height: 584px;
+background: #fcfcfc;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 72px 24px 24px 24px;
+}
+
+.btn-modal{
+position: absolute;
+top: 24px;
+right: 24px;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+padding: 0;
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.btn-modal:hover{
+background-color: #404bbf;
+border: none;
+}
+
+
+.btn-modal:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+
+.icon-modal{
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-modal:hover{
+fill: #ffffff
+}
+
+.icon-modal:focus {
+    fill: #ffffff
 }
 
 .text-modal{
@@ -603,13 +685,76 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-padding: 72px, 24px, 12px, 24px;
+margin-bottom: 16px;
+}
+
+.label-modal-div{
+    margin-bottom: 8px;
 }
 
 .label-modal{
-    width: 100%;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
 }
 
-.icons-modal{
-    color: #020203;
+.input-modal{
+    position: relative;
+
+}
+
+.input-modal-com{
+width: 100%;
+height: 40px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+background-color: transparent;
+padding-left: 38px;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-modal-com:focus{
+border-color: #4D5AE5;
+}
+
+.modal-icon-name{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon-name:focus{
+fill: #4D5AE5;}
+
+
+.textarea-comment{
+    margin-bottom: 16px;
+}
+
+.textarea-fig{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-fig:focus{
+border-color: #4D5AE5;}
+
+.chekbox{
+    margin-bottom: 24px;
 }
