--- a/css/styles.css
+++ b/css/styles.css
@@ -606,6 +606,10 @@ margin-top: 18px;
     margin-left: 16px;
 }
 
+.icon-new{
+    background-color: #e7e9fc;
+}
+
 
 .modal-overlay{
 position: fixed;
