--- a/css/styles.css
+++ b/css/styles.css
@@ -579,6 +579,7 @@ input::placeholder {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #fff;
+        margin-bottom: 16px;
 }
 
 .btn-subscribe{
@@ -607,7 +608,7 @@ margin-top: 18px;
 }
 
 .icon-new{
-    background-color: #e7e9fc;
+    margin-left: 16px;
 }
 
 
