--- a/css/styles.css
+++ b/css/styles.css
@@ -730,9 +730,21 @@ border-color: #4D5AE5;
     top: 50%;
     transform: translateY(-50%);
     fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-icon-name:focus{
-fill: #4D5AE5;}
+
+.input-modal-com:focus .modal-icon-name{
+    fill: #4D5AE5;
+}
+
+
+.btn-modal:hover .modal-icon-name{
+    fill: #ffffff;
+}
+
+.btn-modal:focus .modal-icon-name {
+    fill: #ffffff;
+}
 
 
 .textarea-comment{
@@ -762,14 +774,30 @@ border-color: #4D5AE5;}
     margin-bottom: 24px;
 }
 
+.ch-hid{
+
+}
+
 .policy{
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
 }
 
+.policy-span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: inline-flex;
+align-items: center;
+justify-content: center;
+fill: transparent;
+
+}
 
 .link-policy{
     line-height: 1.33333;
