--- a/css/styles.css
+++ b/css/styles.css
@@ -806,6 +806,12 @@ fill: transparent;
         color: #4d5ae5;
 }
 
+.policy-input:checked + .policy-span {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
+
 .btn-send{
     display: block;
     min-width: 169px;
