--- a/css/styles.css
+++ b/css/styles.css
@@ -731,9 +731,10 @@ border-color: #4D5AE5;
     transform: translateY(-50%);
     fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2e2f42;
 }
 
-.input-modal-com:focus .modal-icon-name{
+.input-modal-com:focus+.modal-icon-name{
     fill: #4D5AE5;
 }
 
