--- a/css/styles.css
+++ b/css/styles.css
@@ -827,5 +827,6 @@ fill: transparent;
         background-color: #4D5AE5;
         border: none;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        margin: auto;
 
 }
