--- a/css/styles.css
+++ b/css/styles.css
@@ -549,7 +549,6 @@ ul {
 .form-subscribe{
     display: flex;
 color: #2e2f42;
-    border-radius: 4px;
     gap: 24px;
 
 }
@@ -599,7 +598,6 @@ background-color: #4D5AE5;
 border: none;
 border-radius: 4px;
 padding: 8px 24px;
-margin-top: 18px;
 
 }
 
@@ -829,4 +827,12 @@ fill: transparent;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         margin: auto;
 
+}
+
+.btn-send:hover {
+    background-color: #404BBF;
+}
+
+.btn-send:focus {
+    background-color: #404BBF;
 }
