--- a/css/styles.css
+++ b/css/styles.css
@@ -654,6 +654,9 @@ cursor: pointer;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icon-close-modal{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .btn-modal:hover{
 background-color: #404bbf;
@@ -666,18 +669,23 @@ border: none;
     border: none;
 }
 
-
-.icon-modal{
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/* .btn-modal:focus .icon-close-moda{
+fill: #ffffff;
 }
 
-.icon-modal:hover{
-fill: #ffffff
+.btn-modal:hover .icon-close-moda {
+    fill: #ffffff;
+} */
+
+
+.icon-close-modal:hover{
+    fill: #ffffff;
 }
 
-.icon-modal:focus {
-    fill: #ffffff
+.icon-close-focus:hover {
+    fill: #ffffff;
 }
+
 
 .text-modal{
 font-weight: 500;
