--- a/css/styles.css
+++ b/css/styles.css
@@ -669,11 +669,11 @@ border: none;
     border: none;
 }
 
-.btn-modal:focus .icon-close-moda{
+.btn-modal:focus >.icon-close-moda{
 fill: #ffffff;
 }
 
-.btn-modal:hover .icon-close-moda {
+.btn-modal:hover >.icon-close-moda {
     fill: #ffffff;
 }
 
